# matrix-slayer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  run_tests.sh
include/: Matrix.hpp  MatrixFactory.hpp
include/matrixslayer/: Matrix.hpp  MatrixFactory.hpp  Vector.hpp
include/matrixslayer/store/: ColumnMajorStore.hpp  RowMajorStore.hpp
include/store/: ColumnMajorStore.hpp  RowMajorStore.hpp  Store.hpp
src/: Matrix.cpp  MatrixFactory.cpp  Vector.cpp
src/store/: ColumnMajorStore.cpp
test/: MatrixFactory_test.cpp  Matrix_test.cpp  Vector_test.cpp
test/store/: ColumnMajorStore_test.cpp  RowMajorStore_test.cpp
